# Licenta

./: .gitignore  CMakeLists.txt  CMakePresets.json  CodArduino.txt  OBJECT_CREATION.md  PROJECT_CONFIG.md  README.md  doxy  linux_libs.md  mds.cmake.in  vcpkg.json
documentation/: Interface_definitions.rtf
img/: asc_reader_test.xml
source/: README.md
source/application/: CMakeLists.txt  README.md
source/application/source/: imnodes_internal.h  main.cxx  main_cli.cxx
source/core/: CMakeLists.txt  doxy
source/core/engine/: CMakeLists.txt  README.md
source/core/engine/include/: visibility.h
source/core/engine/include/core/: ConfigurationManager.hpp  DistributionManager.hpp  Engine.hpp  EngineObject.hpp  MeasurementObjectFactory.hpp
source/core/engine/include/statistics/: CPUHelper.hpp  DistributionStatistics.hpp  MemoryUsageStatistics.hpp
source/core/engine/include/utilis/: HandleGenerator.hpp  InterfaceUtilityHelper.hpp  LibUtility.hpp
source/core/engine/source/: CPUMonitor.cxx  CPUMonitor.hpp  ConfigurationManager.cxx  DistributionManager.cxx  Engine.cxx  EngineObject.cxx  MeasurementObjectFactory.cxx  MemoryVisualization.cxx  MemoryVisualization.hpp  SignalExtraction.cxx  SignalExtraction.hpp  Watchdog.cxx  Watchdog.hpp  pch.h
source/core/engine/test/: CMakeLists.txt
source/core/engine/test/source/: BenchMarkUtilis.hpp  CoreEngineBenchMark.cxx  CoreInitializationTest.cxx  CoreTestFramework.hpp  main.cxx
source/core/logger/: CMakeLists.txt  README.md
source/core/logger/include/: LogRegistry.hpp  Logger.hpp
source/core/logger/source/: LogRegistry.cxx  Logger.cxx  pch.h
source/data_sources/: CMakeLists.txt  README.md  doxy
source/data_sources/raw_data_generator/: CMakeLists.txt
source/data_sources/raw_data_generator/include/: visibility.h
source/data_sources/raw_data_generator/include/transmitters/: DummyObject.hpp
source/data_sources/raw_data_generator/source/: DummyObject.cxx
source/data_sources/sensor_arduino/: CMakeLists.txt
source/data_sources/sensor_arduino/include/: visibility.h
source/data_sources/sensor_arduino/include/data_source/: SensorArduino.hpp
source/data_sources/sensor_arduino/source/: SensorArduino.cxx
source/data_sources/wave_data_generator/: CMakeLists.txt
source/data_sources/wave_data_generator/include/: visibility.h
source/data_sources/wave_data_generator/include/data_source/: WaveDataGenerator.hpp
source/data_sources/wave_data_generator/source/: WaveDataGenerator.cxx
source/data_sources/web_cam/: CMakeLists.txt
source/data_sources/web_cam/include/: visibility.h
source/data_sources/web_cam/include/data_source/: WebCam.hpp
source/data_sources/web_cam/source/: WebCam.cxx
source/data_visualization/: CMakeLists.txt  README.md  doxy
source/data_visualization/raw_data_visualization/: CMakeLists.txt
source/data_visualization/raw_data_visualization/include/: RawDataProcessor.hpp  visibility.h
source/data_visualization/raw_data_visualization/source/: RawDataProcessor.cxx
source/data_visualization/read_file/: CMakeLists.txt
source/data_visualization/read_file/include/: ReadFile.hpp  visibility.h
source/data_visualization/read_file/source/: ReadFile.cxx
source/data_visualization/sensor_arduino_visualizer/: CMakeLists.txt
source/data_visualization/sensor_arduino_visualizer/include/: SensorArduinoVisualizer.hpp  visibility.h
source/data_visualization/sensor_arduino_visualizer/source/: SensorArduinoVisualizer.cxx
source/data_visualization/signal_monitor/: CMakeLists.txt
source/data_visualization/signal_monitor/include/: SignalMonitor.hpp  visibility.h
source/data_visualization/signal_monitor/source/: SignalMonitor.cxx  pch.h
source/data_visualization/wave_visualizer/: CMakeLists.txt
source/data_visualization/wave_visualizer/include/: WaveVisualizer.hpp  visibility.h
source/data_visualization/wave_visualizer/source/: WaveVisualizer.cxx
source/data_visualization/webcam_visualisez/: CMakeLists.txt
source/data_visualization/webcam_visualisez/include/: WebCamVisualizer.hpp  visibility.h
source/data_visualization/webcam_visualisez/source/: WebCamVisualizer.cxx
source/data_visualization/write_file/: CMakeLists.txt
source/data_visualization/write_file/include/: WriteFile.hpp  visibility.h
source/data_visualization/write_file/source/: WriteFile.cxx
source/definitions/: CMakeLists.txt  README.md  doxy
source/definitions/include/data_types/: SineWave.h
source/definitions/include/defs/: Configuration.hpp  DataPackage.hpp  Distribution.hpp  GuiDefs.hpp  Log.hpp  MdsInterface.hpp  MeasurementObjectDefs.hpp  Receiver.hpp  SignalExtraction.hpp  Transmitter.hpp
source/utilis/: CMakeLists.txt  README.md  doxy
source/utilis/parser/xml/: CMakeLists.txt
source/utilis/parser/xml/include/: XmlWrapper.hpp  visibility.h
source/utilis/parser/xml/source/: XmlWrapper.cxx
